<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="25dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context="com.example.guillaume.client_android.LoginActivity"
    >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Public server"
                    android:id="@+id/radioButton_publicServer"
                    android:button="@null"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:clickable="true"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Private server"
                    android:button="@null"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:id="@+id/radioButton_privateServer"
                    android:clickable="true"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/serverLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <EditText
                        android:id="@+id/server"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter private server name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceMedium"
                android:textColor="@color/buttonTextColor"
                android:background="@color/buttonBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="16dp"
                android:text="Login"
                android:width="120dp"
                android:textStyle="bold"
                android:clickable="true" />

            <Button
                android:id="@+id/subscribe_button"
                style="?android:textAppearanceMedium"
                android:textColor="@color/buttonTextColor"
                android:background="@color/buttonBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="No login? Subscribe!"
                android:width="120dp"
                android:textStyle="bold"
                android:clickable="true" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
